# learn_wgpu

./: Cargo.toml  es6.html
src/: lib.rs  main.rs  shader.wgsl  texture.rs
