[package]
name = "learn_wgpu"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "learn_wgpu"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30" }
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = {version = "1.24.0", features = [ "derive" ]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "27.0.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
]}
